--- a/src/cabecera.tex
+++ b/src/cabecera.tex
@@ -8,10 +8,10 @@
 \setlength{\parskip}{\baselineskip}
 \newcommand{\personalheader}[2]{
 	\pagestyle{fancy}
-  \setlength{\headheight}{70.866141732pt}
-  \setlength{\topmargin}{-50pt}
-  \setlength{\headsep}{0pt}
-  \setlength{\footskip}{13.866141732pt}
+	\setlength{\headsep}{50pt}
+	\setlength{\headheight}{38.87935pt}
+	\addtolength{\topmargin}{-26.87935pt}
+	\setlength{\footskip}{23.866141732pt}
 	\renewcommand{\headrulewidth}{0pt}
 	\fancyhead[R]{#1\\#2}
 	\fancyfoot{}
