--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -66,4 +66,5 @@
 \providecommand{\palabraG}{\palabra{x}{n}}
 \providecommand{\push}[1]{\stackrel{\hookrightarrow}{#1}}
 \providecommand{\pull}[1]{\stackrel{\hookleftarrow}{#1}}
-\providecommand{\ent}[1]{\lfloor #1 \rfloor}
+\providecommand{\lowerInt}[1]{\lfloor #1 \rfloor}
+\providecommand{\upperInt}[1]{\lceil #1 \rceil}
