--- a/src/cap1.tex
+++ b/src/cap1.tex
@@ -1,13 +1,13 @@
-\section{Contexto y estado del arte}
+\section{Introducción a los códigos de correción de errores}
 
 Cuando un mensaje es enviado, aún cuando se pueda garantizar su recepción, se debe también asegurar que el mensaje no ha sido alterado o que si ha sido modificado, se tiene que poder recuperar la información original.
 
 Para usar un canal de transmisión digital, el mensaje a de ser codificado usando un conjunto finito de símbolos que recibe el nombre de \textbf{alfabeto}, a lo largo de este trabajo, se denota a este conjunto con la letra $\Gamma$ y por $q$ a su longitud o cardinal, $q=|\Gamma|$.
-Se prestará especial atención al alfabeto digital por excelencia, $\Gamma = \Z_q = \set{0, 1}$ también llamado alfabeto binario, pues es el usado en todas las transmisiones a través de internet.
+Se prestará especial atención al alfabeto digital por excelencia, $\Gamma = \Z_2 = \set{0, 1}$ también llamado alfabeto binario.
 
 Hay que recordar, que en general sobre $\Z_q$ se tiene definido una suma interna, muchas veces llamada suma directa y que se denota como $\oplus$ y que está definido como $x\oplus y = (x+y)\bmod q$.
 
-Un resultado trivial y que se debe resaltar es que $\forall\ x,y\in\Z_q$ o bien $x=y$ o bien $x\oplus 1=y$.
+Un resultado trivial y que se debe resaltar es que $\forall\ x,y\in\Z_2$ o bien $x=y$ o bien $x\oplus 1=y$.
 
 El mensaje codificado es enviado a través de un canal, y en el mejor de los casos llega al receptor sin alteración del contenido.
 Sin embargo la situación real es que no podemos garantizar la no modificación del mensaje, a esta situación se conoce como un \textbf{canal con ruido}.
@@ -32,13 +32,13 @@ La idea detrás de la técnica de los códigos de corrección de errores es tene
 
 \begin{example}
 	Sea $\Gamma=\set{1, 2, 3, 4, 5, 6}$ los valores de lanzar un dado, y se define el $6$-código de longitud 5, $C=\set{11111, 22222, 33333, 44444, 55555, 66666}$.
-	Tras lanzar el dado 3 veces y obtener el resultado 1, 2, 5 se codifica como 111112222233333 y es enviado por un canal con ruido que modifica el mensaje y es recibido como 114142235233433.
+	Tras lanzar el dado 3 veces y obtener el resultado 1, 2, 5 se codifica como 111112222255555 y es enviado por un canal con ruido que modifica el mensaje y es recibido como 114142235255455.
 
 	Con esta técnica podemos recuperar el mensaje original pues es fácil ver como era el mensaje original
 	\begin{align*}
 		11414 & \so 11111 \\
 		22352 & \so 22222 \\
-		33433 & \so 33333
+		55455 & \so 55555
 	\end{align*}
 \end{example}
 
@@ -65,11 +65,11 @@ Tras las reflexiones anteriores, se van a definir los conceptos que usaremos a l
 \begin{definition}
 	Sean $x=\palabraG$ y $y=\palabraN{y}$ dos palabras de $\Z_q^n$, se llama \define{distancia de Hamming}{distancia_hamming} a
 	\[
-		d(x, y) = x_1\oplus y_1 + \dots + x_n\oplus y_n
+		d(x, y) = n-\sum_{k=1}^n \delta_{x_k y_k}
 	\]
 \end{definition}
 
-Como se comprueba en Hill~(\cite{hill_first_1980}) la distancia de Hamming es una distancia, y como es la única distancia que se va a considerar se llamará simplemente distancia.
+Como se comprueba en Hill~\cite{hill_first_1980} la distancia de Hamming es una distancia, y como es la única distancia que se va a considerar se llamará simplemente distancia.
 
 Cuando un elemento $x\in\Z_q^n$ es enviado y el canal lo modifica, lo importante no es cuantos cambios se realizan en $x$, pues a veces un cambio corrige un cambio anterior, así que simplemente hay que saber como está el elemento en el momento de recibirlo, y la mejor forma de medir estos cambios es sabiendo la distancia con respecto al enviado.
 
@@ -80,7 +80,7 @@ Cuando un elemento $x\in\Z_q^n$ es enviado y el canal lo modifica, lo importante
 Se puede definir también la distancia de una palabra a un conjunto y dos valores asociado a un conjunto que se llama el radio interior y el radio exterior.
 
 \begin{definition}
-	Sean $x=\palabraG$ y $C$ un subconjunto de $\Z_q^n$, se llama \define{distancia de x a C}{distancia_conjunto} a
+	Sean $x$ una palabra y $C$ un subconjunto de $\Z_q^n$, se llama \define{distancia de x a C}{distancia_conjunto} a
 	\[
 		d(x, C) = \min\set{d(x,y)\ \forall y\in C}
 	\]
@@ -113,24 +113,24 @@ Con la nomenclatura de las definiciones anteriores, se puede comprobar fácilmen
 	\item $r(C)\leq R(C) \leq n$.
 \end{enumerate}
 
-Una técnica muy habitual de corregir errores es considerar que el elemento recibido, originalmente es el elemento más cercano al recibido, es decir, si $C$ es un código y $x\in C$ es enviado, entonces tomamos $n=d(\push{x}, C)$ y un elemento $x'\in C\tq d(\push{x}, x')=n$, hay que considerar códigos para los cuales sin opción se tenga que $x'=x$.
+Una técnica muy habitual de corregir errores es considerar que el elemento recibido hay que decodificarlo a la palabra clave más cercana, es decir, si $C$ es un código y $x\in C$ es enviado, entonces tomamos $n=d(\push{x}, C)$ y un elemento $x'\in C\tq d(\push{x}, x')=n$, hay que considerar códigos para los cuales sin opción se tenga que $x'=x$.
 
 \begin{lemma}
-	Sea $C\in\Z_q^2$ un código con radio interno $n$, si $n$ es impar, entonces se puede corregir correctamente a lo más los $\ent{n/2}$-errores.
+	Sea $C\in\Z_q^2$ un código con radio interno $n$, si $n$ es impar, entonces se puede corregir correctamente a lo más los $\lowerInt{n/2}$-errores.
 \end{lemma}
 \begin{proof}
-	Sea $x\in C$ para el cual $\pull{x}$ es un $\ent{n/2}$-error, entonces $d(x, \push{x})=\ent{n/2}$.
+	Sea $x\in C$ para el cual $\pull{x}$ es un $\lowerInt{n/2}$-error, entonces $d(x, \push{x})=\lowerInt{n/2}$.
 	Supongamos que existe otra palabra $y$ del código que es igual o más cercano a $\push{x}$, entonces
 	\[
-		n = r(C) \leq d(x, y) \leq d(x, \push{x}) + d(\push{x}, y) = \ent{n/2} + d(\push{x}, y) \leq \ent{n/2} + \ent{n/2} < n
+		n = r(C) \leq d(x, y) \leq d(x, \push{x}) + d(\push{x}, y) = \lowerInt{n/2} + d(\push{x}, y) \leq \lowerInt{n/2} + \lowerInt{n/2} < n
 	\]
 	Por tanto se llega a una contradicción, así que
 	\[
-		C\cap B(\push{x}, \ent{n/2}) = \set{x}\qedhere
+		C\cap B(\push{x}, \lowerInt{n/2}) = \set{x}\qedhere
 	\]
 \end{proof}
 
-Con el mismo razonamiento, se puede observar que para cuando el radio interno de un código es $n$ par, entonces se puede corregir a lo más $\ent{(n-1)/2}$-errores.
+Con el mismo razonamiento, se puede observar que para cuando el radio interno de un código es $n$ par, entonces se puede corregir a lo más $\lowerInt{(n-1)/2}$-errores.
 \begin{example}
 	\label{ex:1}
 	Consideremos el siguiente código de $\Z_2^4$, $C=\set{0000, 0101, 1010, 1111}$.
@@ -139,7 +139,7 @@ Con el mismo razonamiento, se puede observar que para cuando el radio interno de
 		& & d(0101, 1010) &= 2 & d(0101, 1111) = 2 \\
 		& & & & d(1010, 1111) = 2
 	\end{align*}
-	Tenemos que el radio interno de $C$ es $2$, como $\ent{(2-1)/2}=0$ pues es claro que hay errores que no se pueden corregir correctamente.
+	Tenemos que el radio interno de $C$ es $2$, como $\lowerInt{(2-1)/2}=0$ hay errores que no se pueden corregir correctamente.
 
 	Efectivamente, si por ejemplo recibimos la palabra $1011$, no se puede saber si la palabra clave enviada es $1010$ o $1111$, es decir, puede haber ocurrido un sólo error en la cuarta posición o un sólo error en la segunda posición.
 \end{example}
@@ -152,7 +152,7 @@ Con el mismo razonamiento, se puede observar que para cuando el radio interno de
 		& & d(10101, 11010) &= 3 & d(10101, 01111) = 3 \\
 		& & & & d(11010, 01111) = 3
 	\end{align*}
-	Tenemos que el radio interno de $C$ es $3$, como $\ent{3/2}=1$ pues se pueden corregir correctamente cualquier 1-error.
+	Tenemos que el radio interno de $C$ es $3$, como $\lowerInt{3/2}=1$ pues se pueden corregir correctamente cualquier 1-error.
 
 	Por ejemplo, si recibimos la palabra $10111$, calculando la distancia a $C$ que es
 	\begin{align*}
@@ -162,32 +162,9 @@ Con el mismo razonamiento, se puede observar que para cuando el radio interno de
 \end{example}
 
 \begin{definition}
-	Diremos que $C$ es un $(n, m, d)$-código si $C\subset\Z_q^n$, $|C| = m$ y $r(C)=d$.
+	Diremos que $C$ es un \textbf{$(q, n, m, d)$-código} si $C\subset\Z_q^n$, $|C| = m$ y $r(C)=d$.
+	Cuando $q=2$ diremos que $C$ es un $(n, m, d)$-código binario.
 \end{definition}
-Así el ejemplo~\ref{ex:1} es un $(4, 4, 2)$-código, mientras el ejemplo~\ref{ex:2} es un $(5, 4, 3)$-código.
-Los códigos binarios de repetición de longitud n son $(n, 2, n)$-códigos.
 
-Hasta el momento se ha considerado que los errores en la trasmisión se realizan de forma aleatoria y equiprobable sobre cualquier símbolo, este tipo de canales se llaman \textbf{canales binarios simétricos}, y si llamamos $p$ a la probabilidad de error en el canal, si $x=x_1\cdots x_n\in C$ es una palabra clave de un código, la probabilidad de ser enviado sin error es
-\[
-	P(\pull{x} = \push{x}) =P(\pull{x_1} = \push{x_1})\cdots P(\pull{x_n} = \push{x_n})=(1-p)^n
-\]
-
-Pero la pregunta que realmente hay que preguntarse y que será el objeto principal de este trabajo es:
-
-\textbf{¿Cual es la probabilidad de que C sea capaz de corregir una palabra recibida?}
-
-\subsection{P}
-
-Un buen $(n, m, d)$-código debe tener las siguientes características:
-\begin{itemize}
-	\item Un valor pequeño de $n$, pues así se transmitirá más rápido.
-	\item Un valor alto de $m$, pues así se enviará más información.
-	\item un valor alto de $d$, para corregir la mayor cantidad de errores.
-\end{itemize}
-
-Como todas estas características no son posibles, se tiene que valorar que valor se quiere optimizar.
-¿Que relación hay entre estos valores?
-
-En una primera estimación, se tiene que $1\leq m\leq 2^n$ y $1\leq d\leq n$.
-
-%TODO: Desarrollar.
+Así el ejemplo~\ref{ex:1} es un $(4, 4, 2)$-código binario, mientras el ejemplo~\ref{ex:2} es un $(5, 4, 3)$-código binario.
+Los $q$-códigos de repetición de longitud n son $(q, n, q, n)$-códigos.
