--- a/src/main.tex
+++ b/src/main.tex
@@ -8,6 +8,7 @@
 \usepackage{color}
 \usepackage{stmaryrd}
 \usepackage{biblatex}
+\usepackage{tikz}
 \addbibresource{bibliografia.bib}
 \input{personalizacion}
 \input{cabecera}
@@ -16,5 +17,8 @@
 	\include{portada}
 	\tableofcontents
 	\include{cap1}
+	\include{cap2}
+	%\include{combinatoria}
+	\include{cap3}
 	\printbibliography
 \end{document}
