--- a/src/cap1.tex
+++ b/src/cap1.tex
@@ -2,12 +2,12 @@
 
 Cuando un mensaje es enviado, aún cuando se pueda garantizar su recepción, se debe también asegurar que el mensaje no ha sido alterado o que si ha sido modificado, se tiene que poder recuperar la información original.
 
-Para usar un canal de transmisión digital, el mensaje a de ser codificado usando un conjunto finito de símbolos que recibe el nombre de \textbf{alfabeto}, a lo largo de este trabajo, se denota a este conjunto con la letra $\Gamma$ y por $q$ a su longitud o cardinal, $q=|\Gamma|$.
+Para usar un canal de transmisión digital, el mensaje a de ser codificado usando un conjunto finito de símbolos que recibe el nombre de \textbf{alfabeto}, a lo largo de este trabajo, se denota a este conjunto con la letra $\Gamma$ y por $q$ a su longitud o cardinal, $q=|\Gamma|$, cuando se quiera hacer referencia a la longitud del alfabeto, se dirá que $\Gamma$ es un $q$-alfabeto.
 Se prestará especial atención al alfabeto digital por excelencia, $\Gamma = \Z_2 = \set{0, 1}$ también llamado alfabeto binario.
 
-Hay que recordar, que en general sobre $\Z_q$ se tiene definido una suma interna, muchas veces llamada suma directa y que se denota como $\oplus$ y que está definido como $x\oplus y = (x+y)\bmod q$.
+Hay que recordar, que en general sobre $\Z_q$ se tiene definido una suma interna, muchas veces llamada suma directa y que se denota como $\mas$ y que está definido como $x\mas y = (x+y)\bmod q$.
 
-Un resultado trivial y que se debe resaltar es que $\forall\ x,y\in\Z_2$ o bien $x=y$ o bien $x\oplus 1=y$.
+Un resultado trivial y que se debe resaltar es que $\forall\, x,y\in\Z_2$ o bien $x=y$ o bien $x\mas 1=y$.
 
 El mensaje codificado es enviado a través de un canal, y en el mejor de los casos llega al receptor sin alteración del contenido.
 Sin embargo la situación real es que no podemos garantizar la no modificación del mensaje, a esta situación se conoce como un \textbf{canal con ruido}.
@@ -101,16 +101,18 @@ Se puede definir también la distancia de una palabra a un conjunto y dos valore
 \end{definition}
 
 \begin{definition}
-	Sean $x\in\Z_q^n$, se llama \define{bola de centro x y radio n}{bola} a
+	Sean $x\in\Z_q^n$, se llama \define{bola de centro x y radio d}{bola} a
 	\[
-		B(x, n) = \set{y\in\Z_q^n \tq d(x,y)\leq n}
+		B(x, d) = \set{y\in\Z_q^n \tq d(x,y)\leq d}
 	\]
 \end{definition}
 
+Utilizando el concepto topológico de frontera, será $\overline{B}(x, d) = \set{y\in\Z_q^n \tq d(x,y)= d}$.
 Con la nomenclatura de las definiciones anteriores, se puede comprobar fácilmente los siguientes resultados:
 \begin{enumerate}
 	\item $x\in C \iff d(x, C) = 0$.
 	\item $r(C)\leq R(C) \leq n$.
+	\item $|\overline{B}(x, d)| = \binom{n}{d}(q-1)^d$.
 \end{enumerate}
 
 Una técnica muy habitual de corregir errores es considerar que el elemento recibido hay que decodificarlo a la palabra clave más cercana, es decir, si $C$ es un código y $x\in C$ es enviado, entonces tomamos $n=d(\push{x}, C)$ y un elemento $x'\in C\tq d(\push{x}, x')=n$, hay que considerar códigos para los cuales sin opción se tenga que $x'=x$.
