Capítulo 4. Códigos lineales

--- a/src/cap2.tex
+++ b/src/cap2.tex
@@ -126,7 +126,7 @@ Para terminar esta sección veamos como transformar cualquier palabra en otra da
 \subsection{Códigos equivalentes}
 Cuando se tiene un código $C$, y $\sigma$ una transformación de palabra, aplicar la transformación a todos los elementos del código, se obtiene el conjunto, $\sigma(C)=\set{\sigma(x) \forall x\in C}$.
 Ya se tiene todos los elementos necesarios para definir la equivalencia de códigos.
-\begin{definition}
+\begin{definition}\label{def:codigo-equivalente}
 	Sea $\Gamma$ un alfabeto, y $C,C'\subset \Gamma^n$ dos códigos, diremos que $C$ está en relación con $C'$ si existen $\sigma_1,\cdots,\sigma_m$ transformaciones de palabras tal que $\sigma_m\circ\cdots\circ \sigma_1(C)= C'$.
 \end{definition}
 
