--- a/src/personalizacion.tex
+++ b/src/personalizacion.tex
@@ -76,3 +76,8 @@
 \providecommand{\upperInt}[1]{\lceil #1 \rceil}
 \providecommand{\mas}{\oplus}
 \providecommand{\por}{\otimes}
+\providecommand{\Rr}[2]{\updownarrow_{#1, #2}}
+\providecommand{\Rrr}[2]{\circlearrowleft_{#1, #2}}
+\providecommand{\Rrrr}[3]{\updownarrow_{#1, #2, #3}}
+\providecommand{\Cc}[2]{\leftrightarrow^{#1, #2}}
+\providecommand{\Ccc}[2]{\circlearrowleft^{#1, #2}}
