Capítulo 6. Canal con ruido

--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -8,3 +8,14 @@
     month = mar,
     year = {1980},
 }
+@article{shannon,
+    author = {C. E. Shannon},
+    doi = {10.1002/J.1538-7305.1948.TB01338.X},
+    issn = {15387305},
+    issue = {3},
+    journal = {Bell System Technical Journal},
+    pages = {379-423},
+    title = {A Mathematical Theory of Communication},
+    volume = {27},
+    year = {1948},
+}
